<resources>
    <string name="app_name">Nica Must Go</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--drawer menu-->
    <!--Inicio-->
    <string name="Navigation_drawer_home">Inicio</string>

    //drawe menu

    <string name="Home">Inicio</string>
    <string name="Culturales">Centros culturales</string>
    <string name="Enjoy">Entretenimiento</string>
    <string name="Naturales">Sitios naturales</string>
    <string name="Folklore">Folklore</string>
    <string name="Servicios">Servicios</string>

    <string name="Nosotros">Acerca de nosotros</string>
    <string name="Configuracion">Configuracion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
