<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/Navigation_drawer_home" />
        <item
            android:id="@+id/nav_naturales"
            android:icon="@drawable/ic_filter_vintage_black_24dp"
            android:title="@string/Naturales" />

        <item
            android:id="@+id/nav_culturales"
            android:icon="@drawable/ic_assistant_photo_black_24dp"
            android:title="@string/Culturales" />

        <item
            android:id="@+id/nav_folklore"
            android:icon="@drawable/ic_audiotrack_black_24dp"
            android:title="@string/Folklore" />

        <item
            android:id="@+id/nav_entretenimiento"
            android:icon="@drawable/ic_directions_bike_black_24dp"
            android:title="@string/Enjoy" />

        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/ic_local_cafe_black_24dp"
            android:title="@string/Servicios" />


    </group>

    <item android:title="Mas">
        <menu>
            <item
                android:id="@+id/nav_nosotros"
                android:icon="@drawable/ic_star_border_black_24dp"
                android:title="@string/Nosotros" />
            <item
                android:id="@+id/nav_configuracion"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/Configuracion" />
        </menu>
    </item>

</menu>
